#add_subdirectory(aiengine)
#add_subdirectory(audio_formatter)
#add_subdirectory(avbuf)
#add_subdirectory(axicdma)
#add_subdirectory(axidma)
#add_subdirectory(axiethernet)
#add_subdirectory(axipcie)
#add_subdirectory(axipmon)
#add_subdirectory(axis_switch)
#add_subdirectory(axivdma)
#add_subdirectory(board_common)
#add_subdirectory(bram)
#add_subdirectory(can)
#add_subdirectory(canfd)
#add_subdirectory(canps)
#add_subdirectory(cframe)
#add_subdirectory(cfupmc)
#add_subdirectory(clk_wiz)
#add_subdirectory(clockps)
#add_subdirectory(common)
add_subdirectory(coresightps_dcc)
#add_subdirectory(cpu)
add_subdirectory(cpu_cortexa9)
add_subdirectory(cpu_cortexa53)
add_subdirectory(cpu_cortexa72)
add_subdirectory(cpu_cortexr5)
#add_subdirectory(csi)
#add_subdirectory(csi2tx)
#add_subdirectory(csi2txss)
#add_subdirectory(csudma)
#add_subdirectory(ddrcpsu)
#add_subdirectory(ddrps)
#add_subdirectory(ddrpsv)
#add_subdirectory(deinterlacer)
add_subdirectory(devcfg)
#add_subdirectory(dfeccf)
#add_subdirectory(dfeequ)
#add_subdirectory(dfemix)
#add_subdirectory(dfeprach)
#add_subdirectory(dfxasm)
#add_subdirectory(dmaps)
#add_subdirectory(dp12)
#add_subdirectory(dp12rxss)
#add_subdirectory(dp12txss)
#add_subdirectory(dp14)
#add_subdirectory(dp14rxss)
#add_subdirectory(dp14txss)
#add_subdirectory(dpdma)
#add_subdirectory(dphy)
#add_subdirectory(dppsu)
#add_subdirectory(dsi)
#add_subdirectory(dsitxss)
#add_subdirectory(dual_splitter)
#add_subdirectory(emaclite)
add_subdirectory(emacps)
#add_subdirectory(emc)
#add_subdirectory(generic)
#add_subdirectory(gpio)
add_subdirectory(gpiops)
#add_subdirectory(hdcp1x)
#add_subdirectory(hdcp22_cipher)
#add_subdirectory(hdcp22_cipher_dp)
#add_subdirectory(hdcp22_common)
#add_subdirectory(hdcp22_mmult)
#add_subdirectory(hdcp22_rng)
#add_subdirectory(hdcp22_rx)
#add_subdirectory(hdcp22_rx_dp)
#add_subdirectory(hdcp22_tx)
#add_subdirectory(hdcp22_tx_dp)
#add_subdirectory(hwicap)
#add_subdirectory(i2srx)
#add_subdirectory(i2stx)
#add_subdirectory(iic)
#add_subdirectory(iicps)
#add_subdirectory(intc)
#add_subdirectory(iomodule)
#add_subdirectory(ipipsu)
#add_subdirectory(llfifo)
#add_subdirectory(mbox)
#add_subdirectory(mcdma)
#add_subdirectory(mig)
#add_subdirectory(mig_7series)
#add_subdirectory(mipicsiss)
#add_subdirectory(mpegtsmux)
#add_subdirectory(mutex)
#add_subdirectory(nandps)
#add_subdirectory(nandpsu)
#add_subdirectory(ospipsv)
#add_subdirectory(pciepsu)
#add_subdirectory(pmonpsv)
#add_subdirectory(prc)
#add_subdirectory(prd)
add_subdirectory(qspips)
#add_subdirectory(qspipsu)
#add_subdirectory(resetps)
#add_subdirectory(rfdc)
#add_subdirectory(rgb2ycrcb)
#add_subdirectory(rtcpsu)
add_subdirectory(scugic)
add_subdirectory(scutimer)
add_subdirectory(scuwdt)
#add_subdirectory(sd_fec)
#add_subdirectory(sdiaud)
add_subdirectory(sdps)
#add_subdirectory(spdif)
#add_subdirectory(spi)
#add_subdirectory(spips)
#add_subdirectory(srio)
#add_subdirectory(sysmon)
#add_subdirectory(sysmonpsu)
#add_subdirectory(sysmonpsv)
#add_subdirectory(tft)
#add_subdirectory(tmr_inject)
#add_subdirectory(tmr_manager)
#add_subdirectory(tmrctr)
#add_subdirectory(tpg)
#add_subdirectory(trafgen)
#add_subdirectory(trngpsv)
add_subdirectory(ttcps)
#add_subdirectory(uartlite)
#add_subdirectory(uartns550)
add_subdirectory(uartps)
#add_subdirectory(uartpsv)
#add_subdirectory(usb)
add_subdirectory(usbps)
#add_subdirectory(usbpsu)
#add_subdirectory(v_axi4s_remap)
#add_subdirectory(v_csc)
#add_subdirectory(v_deinterlacer)
#add_subdirectory(v_demosaic)
#add_subdirectory(v_frmbuf_rd)
#add_subdirectory(v_frmbuf_wr)
#add_subdirectory(v_gamma_lut)
#add_subdirectory(v_hcresampler)
#add_subdirectory(v_hdmi_common)
#add_subdirectory(v_hdmiphy1)
#add_subdirectory(v_hdmirx)
#add_subdirectory(v_hdmirx1)
#add_subdirectory(v_hdmirxss)
#add_subdirectory(v_hdmirxss1)
#add_subdirectory(v_hdmitx)
#add_subdirectory(v_hdmitx1)
#add_subdirectory(v_hdmitxss)
#add_subdirectory(v_hdmitxss1)
#add_subdirectory(v_hscaler)
#add_subdirectory(v_letterbox)
#add_subdirectory(v_mix)
#add_subdirectory(v_multi_scaler)
#add_subdirectory(v_scenechange)
#add_subdirectory(v_sdirx)
#add_subdirectory(v_sdirxss)
#add_subdirectory(v_sditx)
#add_subdirectory(v_sditxss)
#add_subdirectory(v_tpg)
#add_subdirectory(v_vcresampler)
#add_subdirectory(v_vscaler)
#add_subdirectory(v_warp_filter)
#add_subdirectory(v_warp_init)
#add_subdirectory(video_common)
#add_subdirectory(vphy)
#add_subdirectory(vprocss)
#add_subdirectory(vtc)
#add_subdirectory(wdtps)
#add_subdirectory(wdttb)
add_subdirectory(xadcps)
#add_subdirectory(xdmapcie)
#add_subdirectory(xxvethernet)
#add_subdirectory(ycrcb2rgb)
#add_subdirectory(zdma)
