#add_subdirectory(ddr_self_refresh)
#add_subdirectory(dhrystone)
#add_subdirectory(freertos_hello_world)
#add_subdirectory(freertos_lwip_echo_server)
#add_subdirectory(freertos_lwip_tcp_perf_client)
#add_subdirectory(freertos_lwip_tcp_perf_server)
#add_subdirectory(freertos_lwip_udp_perf_client)
#add_subdirectory(freertos_lwip_udp_perf_server)
#add_subdirectory(img_rcvry)
#add_subdirectory(imgsel)
#add_subdirectory(libmetal_echo_demo)
#add_subdirectory(lwip_echo_server)
#add_subdirectory(lwip_tcp_perf_client)
#add_subdirectory(lwip_tcp_perf_server)
#add_subdirectory(lwip_udp_perf_client)
#add_subdirectory(lwip_udp_perf_server)
#add_subdirectory(mba_fs_boot)
#add_subdirectory(memory_tests)
#add_subdirectory(openamp_echo_test)
#add_subdirectory(openamp_matrix_multiply)
#add_subdirectory(openamp_rpc_demo)
#add_subdirectory(peripheral_tests)
#add_subdirectory(rsa_auth_app)
#add_subdirectory(srec_spi_bootloader)
#add_subdirectory(versal_plm)
#add_subdirectory(versal_psmfw)
#add_subdirectory(zynq_dram_test)
add_subdirectory(zynq_fsbl)
#add_subdirectory(zynqmp_dram_test)
#add_subdirectory(zynqmp_fsbl)
#add_subdirectory(zynqmp_pmufw)