add_subdirectory(xilffs)
add_subdirectory(xilflash)
add_subdirectory(xilfpga)
add_subdirectory(xilisf)
add_subdirectory(xilloader)
add_subdirectory(xilmailbox)
add_subdirectory(xilnvm)
add_subdirectory(xilpdi)
add_subdirectory(xilplmi)
#add_subdirectory(xilpm)
add_subdirectory(xilpuf)
#add_subdirectory(xilrsa)
#add_subdirectory(xilsecure)
add_subdirectory(xilsem)
add_subdirectory(xilskey)
add_subdirectory(xiltimer)